@@ -1,3 +1,10 @@
+2006-12-07 Sandro Santilli <strk@refractions.net>
+
+	* source/headers/geos/algorithm/: CentralEndpointIntersector.h,
+	  Makefile.am: new port from JTS-1.8.
+	* algorithm::LineIntersector: robustness improvements
+	  from JTS-1.8.
+
 2006-12-05 Mateusz Loskot <mateusz@loskot.net>
 
 	* build\msvc80\geos_unit\geos_unit.vcproj: added C API unit tests
